2002-03-14 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Refactor, fix memory leak, fix tracing.

2002-03-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Make use of new interface for traceroot.

2002-03-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Fix typo.

2002-03-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabdisp.cpp: Micro-optimise.

2002-02-12 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Improve definition of core and cladding (again).
	* slabdisp.cpp: Ditto.
	* slabdisp.h: Ditto.

2002-02-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Improve definition of core and cladding.
	* slabdisp.cpp: Ditto.
	
2002-01-29 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Update support for parameter getting/setting.

2001-01-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.h: Add support for parameter getting/setting.
	* slab.cpp: Ditto.
	* slabdisp.cpp: Ditto.

2001-11-27  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Fix signs.

2001-11-16  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Fix multiplication.

2001-11-16  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Fix normalisation.

2001-11-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Fix normalisation.

2001-11-08  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Resolve name conflict.

2001-11-06  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Account for TE_TM polarisation.

2001-11-06  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Normalise modes in TE_TM case.
	
2001-10-29  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Virtualise kz.
	* slabmode.h: Ditto.
	* slabmode.cpp: Ditto.
	* slaboverlap.cpp: Ditto.

2001-10-02  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Add support fow TE_TM polarisation.
	* slab.h: Ditto.